// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`'acala' to 'polkadot' using bridgeSDK cross-chain 'DOT' parachain bridge to releaychain Cross-chain using BridgeSDK works: initial 1`] = `
{
  "address": "5FA9nQDVg267DEd8m1ZypXLBnvN7SFxYwV7ndqSYGiN9TTpu",
  "decimals": 10,
  "fromChain": 1000,
  "toChain": 1000,
}
`;

exports[`'acala' to 'polkadot' using bridgeSDK cross-chain 'DOT' parachain bridge to releaychain Cross-chain using BridgeSDK works: after 1`] = `
{
  "address": "5FA9nQDVg267DEd8m1ZypXLBnvN7SFxYwV7ndqSYGiN9TTpu",
  "decimals": 10,
  "fromChain": 998,
  "toChain": "(rounded 1000)",
}
`;

exports[`'acala' to 'polkadot' using bridgeSDK cross-chain 'DOT' parachain bridge to releaychain Cross-chain using BridgeSDK works: fee 1`] = `"(rounded 0.002)"`;

exports[`'polkadot' to 'acala' using bridgeSDK cross-chain 'DOT' parachain bridge to releaychain Cross-chain using BridgeSDK works: initial 1`] = `
{
  "address": "5FA9nQDVg267DEd8m1ZypXLBnvN7SFxYwV7ndqSYGiN9TTpu",
  "decimals": 10,
  "fromChain": 1000,
  "toChain": 1000,
}
`;

exports[`'polkadot' to 'acala' using bridgeSDK cross-chain 'DOT' parachain bridge to releaychain Cross-chain using BridgeSDK works: after 1`] = `
{
  "address": "5FA9nQDVg267DEd8m1ZypXLBnvN7SFxYwV7ndqSYGiN9TTpu",
  "decimals": 10,
  "fromChain": "(rounded 998)",
  "toChain": "(rounded 1000)",
}
`;

exports[`'polkadot' to 'acala' using bridgeSDK cross-chain 'DOT' parachain bridge to releaychain Cross-chain using BridgeSDK works: fee 1`] = `"(rounded 0.0001)"`;

exports[`'polkadot' to 'statemint' using bridgeSDK cross-chain 'DOT' parachain bridge to releaychain Cross-chain using BridgeSDK works: initial 1`] = `
{
  "address": "5FA9nQDVg267DEd8m1ZypXLBnvN7SFxYwV7ndqSYGiN9TTpu",
  "decimals": 10,
  "fromChain": 1000,
  "toChain": 1000,
}
`;

exports[`'polkadot' to 'statemint' using bridgeSDK cross-chain 'DOT' parachain bridge to releaychain Cross-chain using BridgeSDK works: after 1`] = `
{
  "address": "5FA9nQDVg267DEd8m1ZypXLBnvN7SFxYwV7ndqSYGiN9TTpu",
  "decimals": 10,
  "fromChain": "(rounded 998)",
  "toChain": "(rounded 1000)",
}
`;

exports[`'polkadot' to 'statemint' using bridgeSDK cross-chain 'DOT' parachain bridge to releaychain Cross-chain using BridgeSDK works: fee 1`] = `"(rounded 0.0001)"`;

exports[`'statemint' to 'polkadot' using bridgeSDK cross-chain 'DOT' parachain bridge to releaychain Cross-chain using BridgeSDK works: initial 1`] = `
{
  "address": "5FA9nQDVg267DEd8m1ZypXLBnvN7SFxYwV7ndqSYGiN9TTpu",
  "decimals": 10,
  "fromChain": 1000,
  "toChain": 1000,
}
`;

exports[`'statemint' to 'polkadot' using bridgeSDK cross-chain 'DOT' parachain bridge to releaychain Cross-chain using BridgeSDK works: after 1`] = `
{
  "address": "5FA9nQDVg267DEd8m1ZypXLBnvN7SFxYwV7ndqSYGiN9TTpu",
  "decimals": 10,
  "fromChain": "(rounded 998)",
  "toChain": "(rounded 1000)",
}
`;

exports[`'statemint' to 'polkadot' using bridgeSDK cross-chain 'DOT' parachain bridge to releaychain Cross-chain using BridgeSDK works: fee 1`] = `"(rounded 0.003)"`;

exports[`'acala' to 'astar' using bridgeSDK cross-chain 'AUSD' parachain bridge to releaychain Cross-chain using BridgeSDK works: initial 1`] = `
{
  "address": "5FA9nQDVg267DEd8m1ZypXLBnvN7SFxYwV7ndqSYGiN9TTpu",
  "decimals": 12,
  "fromChain": 10,
  "toChain": 10,
}
`;

exports[`'acala' to 'astar' using bridgeSDK cross-chain 'AUSD' parachain bridge to releaychain Cross-chain using BridgeSDK works: after 1`] = `
{
  "address": "5FA9nQDVg267DEd8m1ZypXLBnvN7SFxYwV7ndqSYGiN9TTpu",
  "decimals": 12,
  "fromChain": 8,
  "toChain": "(rounded 12)",
}
`;

exports[`'acala' to 'astar' using bridgeSDK cross-chain 'AUSD' parachain bridge to releaychain Cross-chain using BridgeSDK works: fee 1`] = `"(rounded 0.0003)"`;

exports[`'interlay' to 'acala' using bridgeSDK cross-chain 'INTR' parachain bridge to releaychain Cross-chain using BridgeSDK works: initial 1`] = `
{
  "address": "5FA9nQDVg267DEd8m1ZypXLBnvN7SFxYwV7ndqSYGiN9TTpu",
  "decimals": 10,
  "fromChain": 100000,
  "toChain": 0,
}
`;

exports[`'interlay' to 'acala' using bridgeSDK cross-chain 'INTR' parachain bridge to releaychain Cross-chain using BridgeSDK works: after 1`] = `
{
  "address": "5FA9nQDVg267DEd8m1ZypXLBnvN7SFxYwV7ndqSYGiN9TTpu",
  "decimals": 10,
  "fromChain": "(rounded 100000)",
  "toChain": "(rounded 1.99)",
}
`;

exports[`'interlay' to 'acala' using bridgeSDK cross-chain 'INTR' parachain bridge to releaychain Cross-chain using BridgeSDK works: fee 1`] = `"(rounded 0.006)"`;

exports[`'acala' to 'interlay' using bridgeSDK cross-chain 'INTR' parachain bridge to releaychain Cross-chain using BridgeSDK works: initial 1`] = `
{
  "address": "5FA9nQDVg267DEd8m1ZypXLBnvN7SFxYwV7ndqSYGiN9TTpu",
  "decimals": 10,
  "fromChain": 10,
  "toChain": 100000,
}
`;

exports[`'acala' to 'interlay' using bridgeSDK cross-chain 'INTR' parachain bridge to releaychain Cross-chain using BridgeSDK works: after 1`] = `
{
  "address": "5FA9nQDVg267DEd8m1ZypXLBnvN7SFxYwV7ndqSYGiN9TTpu",
  "decimals": 10,
  "fromChain": 8,
  "toChain": "(rounded 100000)",
}
`;

exports[`'acala' to 'interlay' using bridgeSDK cross-chain 'INTR' parachain bridge to releaychain Cross-chain using BridgeSDK works: fee 1`] = `"(rounded 0.002)"`;

exports[`'parallel' to 'acala' using bridgeSDK cross-chain 'PARA' parachain bridge to releaychain Cross-chain using BridgeSDK works: initial 1`] = `
{
  "address": "5FA9nQDVg267DEd8m1ZypXLBnvN7SFxYwV7ndqSYGiN9TTpu",
  "decimals": 12,
  "fromChain": 1000,
  "toChain": 0,
}
`;

exports[`'parallel' to 'acala' using bridgeSDK cross-chain 'PARA' parachain bridge to releaychain Cross-chain using BridgeSDK works: after 1`] = `
{
  "address": "5FA9nQDVg267DEd8m1ZypXLBnvN7SFxYwV7ndqSYGiN9TTpu",
  "decimals": 12,
  "fromChain": "(rounded 998)",
  "toChain": "(rounded 1.99)",
}
`;

exports[`'parallel' to 'acala' using bridgeSDK cross-chain 'PARA' parachain bridge to releaychain Cross-chain using BridgeSDK works: fee 1`] = `"(rounded 0.006)"`;

exports[`'acala' to 'parallel' using bridgeSDK cross-chain 'PARA' parachain bridge to releaychain Cross-chain using BridgeSDK works: initial 1`] = `
{
  "address": "5FA9nQDVg267DEd8m1ZypXLBnvN7SFxYwV7ndqSYGiN9TTpu",
  "decimals": 12,
  "fromChain": 10,
  "toChain": 1000,
}
`;

exports[`'acala' to 'parallel' using bridgeSDK cross-chain 'PARA' parachain bridge to releaychain Cross-chain using BridgeSDK works: after 1`] = `
{
  "address": "5FA9nQDVg267DEd8m1ZypXLBnvN7SFxYwV7ndqSYGiN9TTpu",
  "decimals": 12,
  "fromChain": 8,
  "toChain": "(rounded 1000)",
}
`;

exports[`'acala' to 'parallel' using bridgeSDK cross-chain 'PARA' parachain bridge to releaychain Cross-chain using BridgeSDK works: fee 1`] = `"(rounded 1)"`;

exports[`'parallel' to 'acala' using bridgeSDK cross-chain 'ACA' parachain bridge to releaychain Cross-chain using BridgeSDK works: initial 1`] = `
{
  "address": "5FA9nQDVg267DEd8m1ZypXLBnvN7SFxYwV7ndqSYGiN9TTpu",
  "decimals": 12,
  "fromChain": 100,
  "toChain": 10,
}
`;

exports[`'parallel' to 'acala' using bridgeSDK cross-chain 'ACA' parachain bridge to releaychain Cross-chain using BridgeSDK works: after 1`] = `
{
  "address": "5FA9nQDVg267DEd8m1ZypXLBnvN7SFxYwV7ndqSYGiN9TTpu",
  "decimals": 12,
  "fromChain": 98,
  "toChain": "(rounded 12)",
}
`;

exports[`'parallel' to 'acala' using bridgeSDK cross-chain 'ACA' parachain bridge to releaychain Cross-chain using BridgeSDK works: fee 1`] = `"(rounded 0.006)"`;

exports[`'acala' to 'parallel' using bridgeSDK cross-chain 'ACA' parachain bridge to releaychain Cross-chain using BridgeSDK works: initial 1`] = `
{
  "address": "5FA9nQDVg267DEd8m1ZypXLBnvN7SFxYwV7ndqSYGiN9TTpu",
  "decimals": 12,
  "fromChain": 10,
  "toChain": 100,
}
`;

exports[`'acala' to 'parallel' using bridgeSDK cross-chain 'ACA' parachain bridge to releaychain Cross-chain using BridgeSDK works: after 1`] = `
{
  "address": "5FA9nQDVg267DEd8m1ZypXLBnvN7SFxYwV7ndqSYGiN9TTpu",
  "decimals": 12,
  "fromChain": "(rounded 8)",
  "toChain": "(rounded 102)",
}
`;

exports[`'acala' to 'parallel' using bridgeSDK cross-chain 'ACA' parachain bridge to releaychain Cross-chain using BridgeSDK works: fee 1`] = `"(rounded 0.1)"`;
